--- a/archives.html
+++ b/archives.html
@@ -132,6 +132,11 @@
   <div>
     <dl>
 
+          <dt>Tue 06 February 2024</dt>
+
+        <dd>
+          <a href="/first-city-run.html">First City Run</a>
+        </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
@@ -211,6 +216,11 @@
 
         <dd>
           <a href="/san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
+        </dd>
+          <dt>Wed 13 December 2023</dt>
+
+        <dd>
+          <a href="/polarbearrun2024.html">Polar Bear Run 2024</a>
         </dd>
           <dt>Sun 19 March 2023</dt>
 
