--- a/pages/rides.html
+++ b/pages/rides.html
@@ -145,7 +145,7 @@
 <tbody>
 <tr>
 <td style="text-align: center;">1/1/2024</td>
-<td style="text-align: left;">Polar Bear Run</td>
+<td style="text-align: left;"><a href="../polarbearrun2024.html">Polar Bear Run</a></td>
 <td style="text-align: left;">Annual New Year's Day Ride</td>
 </tr>
 <tr>
@@ -155,7 +155,7 @@
 </tr>
 <tr>
 <td style="text-align: center;">4/16/2024</td>
-<td style="text-align: left;">Fist City Run</td>
+<td style="text-align: left;"><a href="../first-city-run.html">Fist City Run</a></td>
 <td style="text-align: left;">Run to Motorcycles &amp; Music Revival</td>
 </tr>
 <tr>
